codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__user_shell_ls_output.snap
---
source: tui/src/chatwidget/tests/exec_flow.rs
expression: blob
---
• You ran ls
  file1
  file2
